--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,31 @@
 .App {
   text-align: center;
   background-color: #563444;
-  color: white;
+  color: #eeeeee;
   min-height: 100vh;
 }
 
+.App-flag {
+  width: 50%;
+  position: relative;
+  margin: 0 auto;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+h1 {
+  padding: 3rem 0 3rem 0;
+}
+
 p {
+  position: absolute;
   margin: 0;
+  text-align: center;
+  bottom: 1rem;
+  left: 1rem;
+  font-weight: bold;
 }
 
 img {
-  width: 40%;
+  width: 100%;
 }
